# opsctl

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.api  Makefile  README.md  TEMPLATE_GUIDE.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  README.md  pyproject.toml
api/src/api/: __init__.py  config.py  main.py
api/tests/: test_main.py
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  config.py  main.py
cli/tests/: test_main.py
scripts/: README.md  dev.bat  dev.ps1
